feat/backend/routes-and-small
